--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/flexslider.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="screen" data-name="skins">
+    <link rel="stylesheet" href="assets/css/layout/wide.css" data-name="layout">
+    <link rel="stylesheet" href="assets/css/animate.css"/>
+     <link rel="stylesheet" type="text/css" href="assets/css/switcher.css" media="screen"/>
 </head>
 <body>
   <app-root></app-root>
